--- a/AR_100Days/Info.plist
+++ b/AR_100Days/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>NSMicrophoneUsageDescription</key>
 	<string></string>
+	<key>NSNearbyInteractionUsageDescription</key>
+	<string></string>
 	<key>NSCameraUsageDescription</key>
 	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
@@ -59,6 +61,10 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_ar100days._tcp</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
