feat: add Day79

--- a/AR_100Days/Info.plist
+++ b/AR_100Days/Info.plist
@@ -66,6 +66,8 @@
 	<array>
 		<string>_ar100days._tcp</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string></string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
